[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "varmint"
version = "0.2.0"
description = "Metagenome variant processor: allele frequencies and coding effects"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Michael Tisza" }
]
keywords = ["metagenomics", "variants", "bioinformatics", "SNP", "GFF", "BAM", "FASTA"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
  "polars>=0.20",
  "pysam>=0.22",
  "biopython>=1.81",
]

[project.scripts]
varmint = "varmint_cli:main"

[tool.hatch.build]
# Include the top-level modules used by the CLI
include = [
  "varmint_cli.py",
  "variant_funcs.py",
  "consensus_funcs.py",
]
